# thinkbox-magma

./: .gitignore  CONTRIBUTING.md  NOTICE.txt  README.md
MagmaCore/: CMakeLists.txt  build.py  conanfile.py  stdafx.cpp  stdafx.h
MagmaCore/Example/: CMakeLists.txt  main.cpp
MagmaCore/frantic/magma/: magma_any.hpp  magma_compiler_interface.hpp  magma_data_type.hpp  magma_exception.hpp  magma_geometry_interface.hpp  magma_interface.hpp  magma_movable.hpp  magma_node_base.hpp  magma_node_type.hpp  magma_singleton.hpp  magma_standard_nodes.hpp
MagmaCore/frantic/magma/functors/: arithmetic.hpp  geometry.hpp  logic.hpp  misc.hpp  objects.hpp  particles.hpp  trigonometry.hpp  vector_math.hpp
MagmaCore/frantic/magma/nodes/: magma_blop_node.hpp  magma_blop_socket_node.hpp  magma_face_query_node.hpp  magma_foreach_containing_face_node.hpp  magma_foreach_face_node.hpp  magma_foreach_particle_node.hpp  magma_foreach_vertex_in_face_node.hpp  magma_foreach_vertex_node.hpp  magma_in_volume_node.hpp  magma_input_channel_node.hpp  magma_input_geometry_interface.hpp  magma_input_objects_interface.hpp  magma_input_particles_interface.hpp  magma_intersect_ray_node.hpp  magma_loop_node.hpp  magma_missing_node.hpp  magma_mux_node.hpp  magma_nearest_particles_avg_node.hpp  magma_nearest_point_node.hpp  magma_node_impl.hpp  magma_node_property.hpp  magma_object_query_node.hpp  magma_output_node.hpp  magma_particle_query_node.hpp  magma_simple_operator.hpp  magma_standard_operators.hpp
MagmaCore/frantic/magma/simple_compiler/: base_compiler.hpp  base_compiler_impl.hpp  magma_particle_istream.hpp  simple_mesh_compiler.hpp  simple_particle_compiler.hpp
MagmaCore/src/: magma_data_type.cpp  magma_geometry_interface.cpp  magma_impl.cpp  magma_node_base.cpp  magma_node_type.cpp  magma_singleton.cpp
MagmaCore/src/nodes/: magma_blop_node.cpp  magma_blop_socket_node.cpp  magma_face_query_node.cpp  magma_foreach_containing_face_node.cpp  magma_foreach_face_node.cpp  magma_foreach_particle_node.cpp  magma_foreach_vertex_in_face_node.cpp  magma_foreach_vertex_node.cpp  magma_input_channel_node.cpp  magma_loop_node.cpp  magma_mux_node.cpp  magma_nearest_particles_avg_node.cpp  magma_object_query_node.cpp  magma_output_node.cpp  magma_particle_query_node.cpp  magma_standard_operators.cpp
MagmaCore/src/simple_compiler/: base_compiler.cpp  magma_particle_istream.cpp  simple_mesh_compiler.cpp  simple_particle_compiler.cpp
MagmaMX/: CMakeLists.txt  MagmaMX.rc  build.py  conanfile.py  resource.h  stdafx.cpp  stdafx.h
MagmaMX/frantic/magma/max3d/: DebugInformation.hpp  IDebugInformation.hpp  IErrorReporter.hpp  IMagmaHolder.hpp  MagmaHolder.hpp  MagmaMaxContext.hpp  MagmaMaxNodeExtension.hpp  MagmaShadeContext.hpp  MagmaTexmapExpression.hpp  magma_max_node_impl.hpp
MagmaMX/frantic/magma/max3d/nodes/: magma_curve_op_node.hpp  magma_geometry_input_node.hpp  magma_input_field_node.hpp  magma_input_object_node.hpp  magma_input_particles_node.hpp  magma_input_value_node.hpp  magma_script_op_node.hpp  magma_texmap_node.hpp  magma_texmap_op_node.hpp  magma_transform_node.hpp
MagmaMX/src/: DebugInformation.cpp  MagmaHolder.cpp  MagmaHolderIO.cpp  MagmaShadeContext.cpp  MagmaTexmapExpression.cpp
MagmaMX/src/magma/: magma_max_nodes.cpp
MagmaMX/src/nodes/: magma_curve_op_node.cpp  magma_input_field_node.cpp  magma_input_geometry_node.cpp  magma_input_object_node.cpp  magma_input_particles_node.cpp  magma_input_value_node.cpp  magma_max_node_base.cpp  magma_max_nodes.cpp  magma_script_op_node.cpp  magma_texmap_node.cpp  magma_texmap_op_node.cpp  magma_transform_node.cpp
MagmaMY/: CMakeLists.txt  build.py  conanfile.py  stdafx.cpp  stdafx.h
MagmaMY/frantic/convert/: tstring.hpp
MagmaMY/frantic/magma/maya/: maya_magma_attr_manager.hpp  maya_magma_common.hpp  maya_magma_context_interface.hpp  maya_magma_datatypes.hpp  maya_magma_desc_mpxdata.hpp  maya_magma_description.hpp  maya_magma_exception.hpp  maya_magma_gui.hpp  maya_magma_holder.hpp  maya_magma_info.hpp  maya_magma_info_factory.hpp  maya_magma_initializer.hpp  maya_magma_mel_command.hpp  maya_magma_mel_connection.hpp  maya_magma_mel_debug_desc.hpp  maya_magma_mel_interface.hpp  maya_magma_mel_loader.hpp  maya_magma_mel_node.hpp  maya_magma_mel_window.hpp  maya_magma_modifier.hpp  maya_magma_mpxnode.hpp  maya_magma_object.hpp  maya_magma_serializable.hpp  maya_magma_serializer.hpp  maya_magma_singleton.hpp
MagmaMY/frantic/magma/maya/nodes/: magma_input_value_node.hpp  maya_magma_input_geometry_node.hpp  maya_magma_input_object_node.hpp  maya_magma_input_particles_node.hpp  maya_magma_node.hpp  maya_magma_transform_nodes.hpp
MagmaMY/frantic/maya/: magma_my_attributes.hpp  parser_args.hpp  selection.hpp
MagmaMY/src/: magma_input_value_node.cpp  maya_magma_attr_manager.cpp  maya_magma_datatypes.cpp  maya_magma_desc_mpxdata.cpp  maya_magma_description.cpp  maya_magma_exception.cpp  maya_magma_gui.cpp  maya_magma_holder.cpp  maya_magma_info.cpp  maya_magma_info_factory.cpp  maya_magma_initializer.cpp  maya_magma_input_geometry_node.cpp  maya_magma_input_object_node.cpp  maya_magma_input_particles_node.cpp  maya_magma_mel_connection.cpp  maya_magma_mel_debug_desc.cpp  maya_magma_mel_interface.cpp  maya_magma_mel_loader.cpp  maya_magma_mel_node.cpp  maya_magma_mel_window.cpp  maya_magma_modifier.cpp  maya_magma_mpxnode.cpp  maya_magma_serializer.cpp  maya_magma_singleton.cpp  maya_magma_transform_nodes.cpp
